--- a/app/views/articles/edit.js.erb
+++ b/app/views/articles/edit.js.erb
@@ -1,1 +1,1 @@
-$('.container-for-article').html('<%= j render("edit_form", post: @post) %>');
+$('.container-for-post').html('<%= j render("edit_form", post: @post) %>');
