--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <%= stylesheet_link_tag 'postStyle' %>
-<%= javascript_pack_tag 'replies' %>
+
 
 <div style="padding-left:5%; padding-right:5%;">
   <div class="row">
@@ -29,7 +29,7 @@
 
           <%= render partial: '/comments/form', locals: { post: @post, comment: @comment } %>
 
-          <%= javascript_pack_tag 'comments' %>
+          
 
           <%= link_to 'Back', posts_path %>
         </div>
@@ -44,9 +44,12 @@
               <span class="topic"><%= post.title %></span> <%= total_count %>
             </a>
           <% end %>
-          <div class="btnIg">
-            <%= link_to 'Make new post', make_post_page_path, class:"linkStyling" %>
-          </div>
+               
+          <% if user_signed_in? %> 
+            <div class="btnIg">
+              <%= link_to 'Make new post', make_post_page_path, class:"linkStyling" %>
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
